--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "bcrypt": "*",
         "mocha": "*",
         "should": "*",
-        "supertest": "*"
+        "supertest": "*",
+        "sails-mongo": "0.9.4",
+        "nodemailer": "*"
     },
       "devDependencies": {
         "mocha": "~1.17.1",
