--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
         "sails-mongo": "0.9.4",
         "nodemailer": "*",
         "passport-facebook": "~1.0.2",
-        "passport-google-oauth": "0.1.5"
+        "passport-google-oauth": "0.1.5",
+        "paypal-express-checkout": "*",
+        "paypal-rest-sdk": "*"
     },
       "devDependencies": {
         "mocha": "~1.17.1",
